feat(server): add get-dishes lambda
Signed-off-by: Guillaume Bonnet <mrsquaare@mrsquaare.fr>

--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@common/types": "workspace:*",
     "@types/aws-lambda": "^8.10.136",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
