chore(server): update package.json
Signed-off-by: Guillaume Bonnet <mrsquaare@mrsquaare.fr>

--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,10 @@
 {
+  "private": true,
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "serverless offline"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@common/types": "workspace:*",
     "@types/aws-lambda": "^8.10.136",
