feat(server): add hello-world websocket
Signed-off-by: Guillaume Bonnet <mrsquaare@mrsquaare.fr>

--- a/server/package.json
+++ b/server/package.json
@@ -19,5 +19,9 @@
     "serverless-offline": "^13.3.3",
     "serverless-offline-sqs": "^8.0.0",
     "typescript": "^5.4.2"
+  },
+  "dependencies": {
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.529.1",
+    "mongoose": "^8.2.1"
   }
 }
