--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,13 @@
   "name": "server",
   "version": "1.0.0",
   "scripts": {
-    "dev": "serverless offline"
+    "dev": "serverless offline",
+    "test": "vitest src/**/*.test.ts"
   },
   "devDependencies": {
     "@common/types": "workspace:*",
     "@types/aws-lambda": "^8.10.136",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
@@ -18,10 +20,12 @@
     "serverless-esbuild": "^1.51.0",
     "serverless-offline": "^13.3.3",
     "serverless-offline-sqs": "^8.0.0",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "vitest": "^1.3.1"
   },
   "dependencies": {
     "@aws-sdk/client-apigatewaymanagementapi": "^3.529.1",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "uuid": "^9.0.1"
   }
 }
