feat(server): remove hello-world and hello-world-ws lambdas
Signed-off-by: Guillaume Bonnet <mrsquaare@mrsquaare.fr>

--- a/server/.env.dev
+++ b/server/.env.dev
@@ -1,4 +1,4 @@
-HELLO_WORLD_WS_AWS_ACCESS_KEY_ID=fake
-HELLO_WORLD_WS_AWS_SECRET_ACCESS_KEY=fake
-HELLO_WORLD_WS_APIGATEWAY_ENDPOINT=http://localhost:3001
-HELLO_WORLD_WS_MONGODB_URI=mongodb://localhost:27017/hello-world-ws
+REGISTER_CLIENT_AWS_ACCESS_KEY_ID=fake
+REGISTER_CLIENT_AWS_SECRET_ACCESS_KEY=fake
+REGISTER_CLIENT_APIGATEWAY_ENDPOINT=http://localhost:3001
+REGISTER_CLIENT_MONGODB_URI=mongodb://root:root@localhost:27017/
